--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "dropbox-v2-api": "^2.4.29",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
